API Interna: Mirar de Moure l'estat de ProcessStatus a Enum (StatusConstants) #1030
