# api-interna/src/main/java/es/caib/portafib/api/interna/secure/signature/v1/AbstractSignatureService.java
@@ -378,7 +378,7 @@ public abstract class AbstractSignatureService extends RestUtils {
         SignedFileInfo sfi = null;
         Document file = null;
 
-        if (status.getStatus() == StatusSignature.STATUS_FINAL_OK) {
+        if (psr.getStatus() == StatusSignature.STATUS_FINAL_OK) {
 
             file = convertFitxerBeanToFirmaSimpleFile(psr.getSignedFile());
 
