# api-interna/src/main/java/es/caib/portafib/api/interna/secure/signature/v1/commons/SignTypeConstants.java
@@ -2,22 +2,30 @@ package es.caib.portafib.api.interna.secure.signature.v1.commons;
 
 import io.swagger.v3.oas.annotations.media.Schema;
 
+/**
+ * Constants for the different types of signatures.
+ * 
+ * @author anadal
+ * 6 may 2025 8:55:43
+ */
 @Schema(
         name = "SignTypeConstants",
-        description = "Tipus de Firma. Valors possibles:\r\n" + "    - “PAdES” (Constant SIGN_TYPE_PADES)\r\n"
-                + "    - “XAdES” (Constant SIGN_TYPE_XADES)\r\n" + "    - “CAdES” (Constant SIGN_TYPE_CADES)\r\n"
-                + "    - “FacturaE” (Constant SIGN_TYPE_FACTURAE)\r\n" + "    - “OOXML” (Constant SIGN_TYPE_OOXML)\r\n"
-                + "    - “ODF” (Constant SIGN_TYPE_ODF)\r\n" + "    - “SMIME” (Constant SIGN_TYPE_SMIME)\r\n"
-                + "    - “CAdES-ASiC-S” (Constant SIGN_TYPE_CADES_ASIC_S)\r\n"
-                + "    - “XAdES-ASiC-S” (Constant SIGN_TYPE_XADES_ASIC_S)\r\n"
+        description = "Tipus de Firma. Valors possibles:\n" + "    - “PAdES” (Constant SIGN_TYPE_PADES)\n"
+                + "    - “XAdES” (Constant SIGN_TYPE_XADES)\n" + "    - “CAdES” (Constant SIGN_TYPE_CADES)\n"
+                + "    - “FacturaE” (Constant SIGN_TYPE_FACTURAE)\n" + "    - “OOXML” (Constant SIGN_TYPE_OOXML)\n"
+                + "    - “ODF” (Constant SIGN_TYPE_ODF)\n" + "    - “SMIME” (Constant SIGN_TYPE_SMIME)\n"
+                + "    - “CAdES-ASiC-S” (Constant SIGN_TYPE_CADES_ASIC_S)\n"
+                + "    - “XAdES-ASiC-S” (Constant SIGN_TYPE_XADES_ASIC_S)\n"
                 + "    - “PKCS#1” (Constant SIGN_TYPE_PKCS1)",
         enumAsRef = true,
-        examples = "PAdES|XAdES|CAdES|FacturaE|OOXML|ODF|SMIME|CAdES-ASiC-S|XAdES-ASiC-S|PKCS#1")
+        /** Parxe utilitzat per a la generació correcta dels noms dels enums dins de l'openapi.json */
+        example = "SIGN_TYPE_PADES|SIGN_TYPE_XADES|SIGN_TYPE_CADES|SIGN_TYPE_FACTURAE"
+                + "|SIGN_TYPE_OOXML|SIGN_TYPE_ODF|SIGN_TYPE_SMIME|SIGN_TYPE_CADESASICS"
+                + "|SIGN_TYPE_XADESASICS|SIGN_TYPE_PKCS")
 public enum SignTypeConstants {
-    SIGN_TYPE_CONSTNATS_PADES("PAdES"), SIGN_TYPE_CONSTNATS_XADES("XAdES"), SIGN_TYPE_CONSTNATS_CADES("CAdES"),
-    SIGN_TYPE_CONSTNATS_FACTURAE("FacturaE"), SIGN_TYPE_CONSTNATS_OOXML("OOXML"), SIGN_TYPE_CONSTNATS_ODF("ODF"),
-    SIGN_TYPE_CONSTNATS_SMIME("SMIME"), SIGN_TYPE_CONSTNATS_CADESASICS("CAdES-ASiC-S"),
-    SIGN_TYPE_CONSTNATS_XADESASICS("XAdES-ASiC-S"), SIGN_TYPE_CONSTNATS_PKCS("PKCS#1");
+    SIGN_TYPE_PADES("PAdES"), SIGN_TYPE_XADES("XAdES"), SIGN_TYPE_CADES("CAdES"), SIGN_TYPE_FACTURAE("FacturaE"),
+    SIGN_TYPE_OOXML("OOXML"), SIGN_TYPE_ODF("ODF"), SIGN_TYPE_SMIME("SMIME"), SIGN_TYPE_CADESASICS("CAdES-ASiC-S"),
+    SIGN_TYPE_XADESASICS("XAdES-ASiC-S"), SIGN_TYPE_PKCS("PKCS#1");
 
     public final String value;
 
